[21] Previously omitted transitions + possible fix for disappearing content on iphone

--- a/css/master.css
+++ b/css/master.css
@@ -1,5 +1,7 @@
 *, *:before, *:after {
   box-sizing: inherit; }
+  *:not(html), *:before:not(html), *:after:not(html) {
+    -webkit-transform: translate3d(0, 0, 0); }
 
 body, html {
   box-sizing: border-box;
@@ -35,6 +37,8 @@ html {
 .link {
   text-decoration: none;
   color: inherit;
+  -webkit-transition: color ease 0.5s;
+  -o-transition: color ease 0.5s;
   transition: color ease 0.5s; }
 
 .nav {
@@ -44,6 +48,8 @@ html {
   width: 100%;
   height: 60px;
   background-color: #fcdb00;
+  -webkit-transition: top 0.5s;
+  -o-transition: top 0.5s;
   transition: top 0.5s; }
   @media (min-width: 800px) {
     .nav {
